--- a/app/src/main/res/layout/edit_book_fragment.xml
+++ b/app/src/main/res/layout/edit_book_fragment.xml
@@ -1,71 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="300dp"
-  android:layout_height="wrap_content"
-  android:layout_gravity="center"
-  android:padding="8dp"
-  android:background="@drawable/cardshape"
-  android:orientation="vertical">
-
-  <Button
-    android:id="@+id/edit_book_add_button"
-    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:layout_margin="5dp"
-    android:background="@drawable/return_circle"
-    android:text="SAVE CHANGES"
-    android:textColor="#FFFFFF" />
-  <EditText
-    android:id="@+id/edit_book_isbn"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:layout_margin="5dp"
+    android:layout_gravity="center"
     android:padding="8dp"
-    android:background="#22191919"
-    android:text="ISBN" />
-  <EditText
-    android:id="@+id/edit_book_title"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:layout_margin="5dp"
-    android:padding="8dp"
-    android:background="#22191919"
-    android:text="Title" />
-  <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:background="@drawable/cardshape"
+    android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="8dp"
+        android:text="Edit your books' information and we'll save your changes for you"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/edit_book_book_image"
+            android:layout_width="45dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/camera_circle"
+            app:srcCompat="@drawable/add_photo_icon" />
+
+        <EditText
+            android:id="@+id/edit_book_author"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#22191919"
+            android:padding="8dp"
+            android:layout_margin="5dp"
+            android:hint="Author">
+        </EditText>
+    </LinearLayout>
     <EditText
-      android:id="@+id/edit_book_author"
-      android:layout_width="251dp"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:layout_margin="5dp"
-      android:padding="8dp"
-      android:background="#22191919"
-      android:text="Author"></EditText>
-
-    <ImageButton
-      android:id="@+id/edit_book_book_image"
-      android:layout_width="45dp"
-      android:layout_height="40dp"
-      android:layout_margin="5dp"
-      android:layout_marginStart="5dp"
-      android:layout_marginEnd="5dp"
-      android:background="@drawable/camera_circle"
-      app:srcCompat="@drawable/add_photo_icon" />
-  </LinearLayout>
-  <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:paddingHorizontal="5dp"
-    android:paddingVertical="8dp"
-    android:text="Edit your books' information and we'll save your changes for you"
-    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:id="@+id/edit_book_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:padding="8dp"
+        android:background="#22191919"
+        android:hint="Title" />
+    <EditText
+        android:id="@+id/edit_book_isbn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:padding="8dp"
+        android:background="#22191919"
+        android:hint="ISBN" />
+    <Button
+        android:id="@+id/edit_book_add_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:text="SAVE CHANGES"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/return_circle" />
 
 </LinearLayout>
