--- a/app/src/main/res/layout/fragment_edit_user.xml
+++ b/app/src/main/res/layout/fragment_edit_user.xml
@@ -8,10 +8,19 @@
     android:background="@drawable/cardshape"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter your new information below"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_marginBottom="16dp"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp">
+        android:layout_marginBottom="8dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_user_edit_text_username"
             android:layout_width="match_parent"
@@ -22,13 +31,23 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_user_edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email Address"
+            android:layout_marginBottom="8dp"
             android:inputType="textEmailAddress"/>
+
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/edit_user_button_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save Changes" />
 
 </LinearLayout>
