Created a suite of UI tests for authentication (#81)

--- a/app/src/main/res/layout/fragment_recover_password.xml
+++ b/app/src/main/res/layout/fragment_recover_password.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_recover_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".auth.LoginFragment">
@@ -85,7 +86,7 @@
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/recover_spinner"
+        android:id="@+id/recover_loader"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,6 +95,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf= "parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
