--- a/app/src/main/res/layout/reqbm.xml
+++ b/app/src/main/res/layout/reqbm.xml
@@ -124,7 +124,7 @@
                 android:textColor="#4CAF50" />
 
             <TextView
-                android:id="@+id/request"
+                android:id="@+id/reqbm_withdraw"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
