Complete book exchange workflow (#83)
Since we don't have scanning implemented yet, I added a temp button in the accepted pages. I also added another variable to book called exchangeStatus. This is to keep track of both sides of the exchange (Owner must give and Borrower must receive). I also added a pull down refresh that will refresh Owner tabs and Borrower tabs.

--- a/app/src/main/res/menu/book_edit_delete_menu.xml
+++ b/app/src/main/res/menu/book_edit_delete_menu.xml
@@ -13,4 +13,12 @@
         android:icon="@drawable/delete_icon"
         android:iconTint="@color/colorError"
         android:title="delete book" />
+
+    <item
+      android:id="@+id/exchange_book"
+      android:layout_width="10dp"
+      android:icon="@drawable/delete_icon"
+      android:iconTint="@color/colorError"
+      android:title="temp"
+      android:visible="false"/>
 </menu>
